Add support for NPM

--- a/deno.json
+++ b/deno.json
@@ -1,25 +1,22 @@
 {
   "name": "@quentinadam/base64",
   "version": "0.1.2",
+  "description": "A simple library to encode and decode base64 strings",
   "license": "MIT",
-  "exports": "./base64.ts",
+  "exports": "./src/base64.ts",
   "imports": {
-    "@quentinadam/assert": "jsr:@quentinadam/assert@^0.1.7",
-    "@quentinadam/hex": "jsr:@quentinadam/hex@^0.1.1",
-    "@quentinadam/require": "jsr:@quentinadam/require@^0.1.1",
-    "@quentinadam/uint8array-extension": "jsr:@quentinadam/uint8array-extension@^0.1.4"
-  },
-  "publish": {
-    "exclude": [
-      ".github/",
-      ".vscode/"
-    ]
+    "@quentinadam/assert": "jsr:@quentinadam/assert@^0.1.10",
+    "@quentinadam/hex": "jsr:@quentinadam/hex@^0.1.2",
+    "@quentinadam/require": "jsr:@quentinadam/require@^0.1.4",
+    "@quentinadam/uint8array-extension": "jsr:@quentinadam/uint8array-extension@^0.1.5",
+    "typescript": "npm:typescript@^5.7.2"
   },
   "fmt": {
     "singleQuote": true,
     "lineWidth": 120
   },
-  "tasks": {
-    "check": "deno check **/*.ts"
+  "compilerOptions": {
+    "noUncheckedIndexedAccess": true,
+    "noImplicitReturns": true
   }
 }
