--- a/deno.json
+++ b/deno.json
@@ -10,11 +10,11 @@
   },
   "exports": "./src/base64.ts",
   "imports": {
-    "@quentinadam/assert": "jsr:@quentinadam/assert@^0.1.10",
-    "@quentinadam/hex": "jsr:@quentinadam/hex@^0.1.2",
-    "@quentinadam/require": "jsr:@quentinadam/require@^0.1.4",
-    "@quentinadam/uint8array-extension": "jsr:@quentinadam/uint8array-extension@^0.1.5",
-    "typescript": "npm:typescript@^5.7.2"
+    "@quentinadam/assert": "jsr:@quentinadam/assert@^0.1.11",
+    "@quentinadam/ensure": "jsr:@quentinadam/ensure@^0.1.0",
+    "@quentinadam/hex": "jsr:@quentinadam/hex@^0.1.3",
+    "@quentinadam/uint8array-extension": "jsr:@quentinadam/uint8array-extension@^0.1.6",
+    "typescript": "npm:typescript@^5.8.3"
   },
   "fmt": {
     "singleQuote": true,
